# tree-sitter-gcode

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  nodemon.json  package-lock.json  package.json  prettier.config.mjs  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-gcode.pc.in
bindings/c/tree_sitter/: tree-sitter-gcode.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGcodeTests/: TreeSitterGcodeTests.swift
examples/: 3D_Chips.ngc  basic.gcode  checksum.gcode  markers.nc  subroutines.nc
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  expressions.txt  markers.txt  subroutines.txt  words.txt
